fix button on safari

--- a/assets/_offer.scss
+++ b/assets/_offer.scss
@@ -85,6 +85,7 @@
 
     &:active {
       transform: translate(5px, 10px);
+      -webkit-transform: translate(5px, 10px);
       &:before {
         content: none;
       }
